--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
       </div>
     </div>
   </section>
-  <script> function load_payment() { location.href = 'payment.html'; } </script>
+  <script>
+    function load_payment() {
+      location.href = 'payment.html';
+    }
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
   <script src="scripts/checklist.js" charset="utf-8"></script>
   <script src="scripts/validation.js"></script>
